RESOLVED FIXED117042
REGRESSION (r119759): Adobe Flash Player "smaller" installer relies on the incorrect firing of a load event and needs an app-specific hack for compatibility
https://bugs.webkit.org/show_bug.cgi?id=117042
Summary REGRESSION (r119759): Adobe Flash Player "smaller" installer relies on the in...
Anders Carlsson
Reported 2013-05-30 12:59:55 PDT
REGRESSION (r119759): Adobe Flash Player "smaller" installer relies on the incorrect firing of a load event and needs an app-specific hack for compatibility
Attachments
Patch (4.51 KB, patch)
2013-05-30 13:03 PDT, Anders Carlsson
mrowe: review+
Anders Carlsson
Comment 1 2013-05-30 13:03:26 PDT
Mark Rowe (bdash)
Comment 2 2013-05-30 13:34:13 PDT
Comment on attachment 203377 [details] Patch View in context: https://bugs.webkit.org/attachment.cgi?id=203377&action=review > Source/WebCore/loader/cache/CachedScript.cpp:116 > + // The installer in question tries to load .js file that doesn't exist,/ causing the server to There's a stray slash in this comment. > Source/WebCore/platform/RuntimeApplicationChecks.cpp:114 > + static bool isSolidStateNetworksDownloader = mainBundleIsEqualTo("com.solidstatenetworks.awkhost"); > + return isSolidStateNetworksDownloader; I'm not too keen on application specific hacks that never expire. With this hack in place they'd never notice the problem themselves and would have a hard time testing any fix on their end.
Mark Rowe (bdash)
Comment 3 2013-05-30 13:39:34 PDT
Comment on attachment 203377 [details] Patch r=me anyway since I don't have any good ideas on how we could target the app specific hack more narrowly either.
Anders Carlsson
Comment 4 2013-05-30 13:49:48 PDT
Note You need to log in before you can comment on or make changes to this bug.