REGRESSION (r119759): Adobe Flash Player "smaller" installer relies on the incorrect firing of a load event and needs an app-specific hack for compatibility https://bugs.webkit.org/show_bug.cgi?id=117042 <rdar://problem/13916291>

Reviewed by Mark Rowe.

Ignore HTTP errors for scripts requested from within the installer. Instead of just checking for the
Adobe Flash installer, we use the "com.solidstatenetworks.awkhost" bundle identifier to determine
whether to apply the workaround. This could in theory fix other installers that use the same mechanism.

* loader/cache/CachedScript.cpp:
(WebCore::CachedScript::shouldIgnoreHTTPStatusCodeErrors):
* loader/cache/CachedScript.h:
* platform/RuntimeApplicationChecks.cpp:
(WebCore::applicationIsSolidStateNetworksDownloader):
* platform/RuntimeApplicationChecks.h:

Canonical link: https://commits.webkit.org/135307@main
git-svn-id: https://svn.webkit.org/repository/webkit/trunk@150977 268f45cc-cd09-0410-ab3c-d52691b4dbfc